adds DFS still missing visualization of path and optimal path

--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/water.css@2/out/water.css">
     <link rel="stylesheet" href="style.css">
-    <title>Recursion</title>
+    <title>Maze Solver</title>
 </head>
 <body>
     <main>
         <h1>Welcome to the maze solver</h1>
+        <button id="start-solve">Start solve</button>
         <div id="board-container">
             <div id="board"></div>
         </div>
