adds function to upload own json files for use

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
             <button id="upload-own">Upload MAZE</button>
             <button id="test-btn">Use test file</button>
             <button id="start-solve" class="hidden">Start solve</button>
+            <button id="send-json" class="hidden">Send JSON</button>
+            <button id="start-maze-solve" class="hidden">Start solve</button>
+        </div>
+        <div>
+            <textarea id="input-field" class="hidden" placeholder="Paste you maze JSON here..."></textarea>
         </div>
         <div id="board-container">
             <div id="path-show" class="paths hidden">
