added more colorcoding so you can see where you start and goal

--- a/index.html
+++ b/index.html
@@ -23,12 +23,16 @@
         <div id="board-container">
             <div id="path-show" class="paths hidden">
                 <div id="show-path"></div>
-                <p>This color shows first search</p>
+                <p id="first-path">This color shows first search</p>
+                <div id="show-optimal"></div>
+                <p id="optimal-path">This color shows optimal path</p>
             </div>
             <div id="board"></div>
             <div id="path-opt" class="paths hidden">
-                <div id="show-optimal"></div>
-                <p>This color shows optimal path</p>
+                <div id="show-start"></div>
+                <p id="start-show">This color shows the start</p>
+                <div id="show-goal"></div>
+                <p id="end-show">This color shows the goal</p>
             </div>
         </div>
     </main>
